fix header spacing

--- a/src/less/_global.less
+++ b/src/less/_global.less
@@ -15,7 +15,7 @@ body {
 
   .wrap {
     z-index: 5;
-    margin-top: 75px;
+    margin-top: 100px;
 
     .container {
       display: none;
@@ -63,6 +63,8 @@ body {
           margin: 0;
           display: inline-block;
           background-color: #000;
+          color: @gray;
+          font-weight: normal;
 
           @media (min-width: @screen-sm-min) {
             font-size: 24px;
